--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             </div>
           </li>
           <li class='nav-right-items'><a class='anchorTag' href="/">Contact</a></li>
-          <li class='nav-right-items'><a class='anchorTag' href="login.html">Log-in</a></li>
+          <li class='nav-right-items'><a class='anchorTag' href="/login.html">Log-in</a></li>
           <li class='nav-right-items'><a id='signInBtn' class='anchorTag' href="/">Sign-up</a></li>
         </ul>
       </nav>
