--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <ul class='nav'>
           <li class='logoHolder'><img src="./Images/Logo.jpeg" alt="" /></li>
           <li><a class='anchorTag' href="/"><img src='./Images/search.png' alt="" /></a></li>
-          <li><a class='anchorTag' href="/login">Log In</a></li>
+          <li><a class='anchorTag' href="/login.html">Log In</a></li>
           <li><img src='./Images/hamburger.png' onclick="toggleSidebar()" class='hamburger' alt="" /></li>
           <!-- {/* This is the hidden navbar toggled after clicking Hamburger */} -->
           <ul id='sidebar'>
